--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,6 @@
             font-size: 1.2em;
         }
 
-        /* Contact Section */
         .contact-section {
             display: flex;
             flex-wrap: wrap;
@@ -94,7 +93,6 @@
             background-color: #555;
         }
 
-        /* Footer */
         footer {
             text-align: center;
             padding: 1em;
@@ -109,7 +107,7 @@
 
     <header>
         <h1>Contact Us</h1>
-        <p>We’d love to hear from you! Reach out with any inquiries or partnership opportunities.</p>
+        <p>We'd love to hear from you! Reach out with any inquiries or partnership opportunities.</p>
     </header>
 
     <section class="contact-section">
