--- a/sustainability_and_care._services.html
+++ b/sustainability_and_care._services.html
@@ -148,13 +148,13 @@
 </head>
 <body>
 
-    <!-- Header Section -->
+
     <header class="header">
         <h1>Sustainability & Care Services</h1>
         <p>Eco-Friendly Practices for a Greener Textile Future</p>
     </header>
 
-    <!-- Sustainability Initiatives Section -->
+  
     <section class="sustainability">
         <h2>Our Sustainability Initiatives</h2>
         <div class="initiative-item">
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <!-- Care Instructions Section -->
+
     <section class="care-instructions">
         <h2>Textile Care Instructions</h2>
         <p>Proper care extends the life of your textiles. Here are some tips for maintaining our eco-friendly fabrics:</p>
@@ -183,7 +183,7 @@
         </ul>
     </section>
 
-    <!-- Testimonials Section -->
+
     <section class="testimonials">
         <h2>Customer Testimonials</h2>
         <div class="testimonial-item">
@@ -194,19 +194,21 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+
     <section class="contact">
         <h2>Contact Us</h2>
         <p>For more information on our sustainability practices or textile care services, please reach out:</p>
-        <form action="#" method="post">
+        <form action="" method="post">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
+            <script>
+                
+            </script>
         </form>
     </section>
 
-    <!-- Footer Section -->
     <footer class="footer">
         <p>&copy; 2024 Sustainability & Care Services - All Rights Reserved.</p>
     </footer>
